Add text portfolio

--- a/index.html
+++ b/index.html
@@ -1,1 +1,107 @@
-Hello World
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="utf-8">
+    <title>Bernardo Loureiro</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="/js/jquery-2.2.4.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="stylesheet" href="/css/master.css" media="screen" title="no title" charset="utf-8">
+</head>
+
+<body>
+    <div class="container">
+        <p>I&#39;m Bernardo Loureiro.</p>
+
+        <div id="yes-script" style="display:none">
+            <p>I am an urbanist and I use technology to understand and transform cities.</p>
+            <p>I work with data, make maps, and develop web applications. I also like teaching how to do these.</p>
+            <p>For the past year I&#39;ve explored New York City&#39;s waste system. As part of this exploration, I&#39;ve built the web tools
+                <a data-opens="we" data-href="http://www.waste.exposed">waste.exposed</a><span data-openedby="we" class="off">, allowing individuals to understand where their waste is going</span>;
+                <a data-opens="wc" data-href="http://www.wastecensusnyc.org">Waste Census</a><span data-openedby="wc" class="off">, showing communities how they are contributing to Zero Waste</span>; and
+                <a data-opens="ws" data-href="http://www.wastescenario.com">Waste Scenario</a><span data-openedby="ws" class="off">, enabling specialists to build different waste systems for the future</span>.</p>
+            <p>Currently, I&#39;m running the blog
+                <a data-opens="msp" data-href="http://medidasp.tumblr.com">MedidaSP</a><span data-openedby="msp" class="off">, examining the potential of open data to foster meaningful discussions about urban policy</span> in São Paulo, Brazil.</p>
+            <p>Previously, I have done projects with
+                <a data-opens="ideo" data-href="http://www.knightfoundation.org/blogs/knightblog/2015/4/2/friday-night-lights-yields-lessons-building-community-charlotte-nc/">IDEO</a><span data-openedby="ideo" class="off">, using design to break down barriers between different communities</span>;
+                with
+                <a data-opens="wxy" data-href="http://www.wxystudio.com/projects/urban_design/brooklyn_strand">WXY</a><span data-openedby="wxy" class="off">, engaging residents in urban design projects</span>; with
+                <a data-opens="bpe" data-href="http://www.buildingproductecosystems.org/">BPE</a><span data-openedby="bpe" class="off">, documenting the closing of material loops in construction industry</span>; and with
+                <a data-opens="23s" data-href="http://www.23sul.com.br/?p=1452">23 Sul</a><span data-openedby="23s" class="off">, designing better transportation infrastructure for cities</span>.</p>
+            <p>I also believe data can be poetic and sensorial. I&#39;ve explored this through
+                <a data-opens="sf" data-href="https://shipping-forecasting.herokuapp.com/">Shipping Forecasting</a><span data-openedby="sf" class="off">, an automatic audio rendition of the BBC weather bulletin</span>; and
+                <a data-opens="ps" data-href="https://vimeo.com/114685563">Placing Sound</a><span data-openedby="ps" class="off">, an interactive installation that lets users control a soundscape</span>.</p>
+        </div>
+
+        <noscript>
+            <p>I am an urbanist and I use technology to understand and transform cities.</p>
+            <p>I work with data, make maps, and develop web applications. I also like teaching how to do these.</p>
+            <p>For the past year I've explored New York City's waste system. As part of this exploration, I've built the web tools
+                <a data-opens="we" data-href="http://www.waste.exposed" class="clicked" href="http://www.waste.exposed" target="_blank">waste.exposed</a><span data-openedby="we" class="on">, allowing individuals to understand where their waste is going</span>;
+                <a data-opens="wc" data-href="http://www.wastecensusnyc.org" class="clicked" href="http://www.wastecensusnyc.org" target="_blank">Waste Census</a><span data-openedby="wc" class="on">, showing communities how they are contributing to Zero Waste</span>;
+                and
+                <a data-opens="ws" data-href="http://www.wastescenario.com" class="clicked" href="http://www.wastescenario.com" target="_blank">Waste Scenario</a><span data-openedby="ws" class="on">, enabling specialists to build different waste systems for the future</span>.</p>
+            <p>Currently, I'm running the blog
+                <a data-opens="msp" data-href="http://medidasp.tumblr.com" class="clicked" href="http://medidasp.tumblr.com" target="_blank">MedidaSP</a><span data-openedby="msp" class="on">, examining the potential of open data to foster meaningful discussions about urban policy</span>                in São Paulo, Brazil.</p>
+            <p>Previously, I have done projects with
+                <a data-opens="ideo" data-href="http://www.knightfoundation.org/blogs/knightblog/2015/4/2/friday-night-lights-yields-lessons-building-community-charlotte-nc/" class="clicked" href="http://www.knightfoundation.org/blogs/knightblog/2015/4/2/friday-night-lights-yields-lessons-building-community-charlotte-nc/"
+                    target="_blank">IDEO</a><span data-openedby="ideo" class="on">, using design to break down barriers between different communities</span>; with
+                <a data-opens="wxy" data-href="http://www.wxystudio.com/projects/urban_design/brooklyn_strand" class="clicked" href="http://www.wxystudio.com/projects/urban_design/brooklyn_strand" target="_blank">WXY</a><span data-openedby="wxy" class="on">, engaging residents in urban design projects</span>;
+                with
+                <a data-opens="bpe" data-href="http://www.buildingproductecosystems.org/" class="clicked" href="http://www.buildingproductecosystems.org/" target="_blank">BPE</a><span data-openedby="bpe" class="on">, documenting the closing of material loops in construction industry</span>;
+                and with
+                <a data-opens="23s" data-href="http://www.23sul.com.br/?p=1452" class="clicked" href="http://www.23sul.com.br/?p=1452" target="_blank">23 Sul</a><span data-openedby="23s" class="on">, designing better transportation infrastructure for cities</span>.</p>
+            <p>I also believe data can be poetic and sensorial. I've explored this through
+                <a data-opens="sf" data-href="https://shipping-forecasting.herokuapp.com/" class="clicked" href="https://shipping-forecasting.herokuapp.com/" target="_blank">Shipping Forecasting</a><span data-openedby="sf" class="on">, an automatic audio rendition of the BBC weather bulletin</span>;
+                and
+                <a data-opens="ps" data-href="https://vimeo.com/114685563" class="clicked" href="https://vimeo.com/114685563" target="_blank">Placing Sound</a><span data-openedby="ps" class="on">, an interactive installation that lets users control a soundscape</span>.</p>
+        </noscript>
+
+        <p>Get in touch: bernardol@newschool.edu,
+            <a class="clicked" target="_blank" href="https://github.com/bplmp">Github</a>,
+            <a class="clicked" target="_blank" href="https://bernardol.cartodb.com/">CartoDB</a>,
+            <a class="clicked" target="_blank" href="https://twitter.com/bernardomaps/">Twitter</a>, and
+            <a class="clicked" target="_blank" href="https://www.linkedin.com/in/loureirobernardo">LinkedIn</a>.</p>
+    </div>
+
+    <script type="text/javascript">
+        window.onload = function() {
+            $('#yes-script').show();
+            init();
+        };
+
+        // js and functionality heavily inspired by Allan Trotter
+        // check out his website:
+        // http://greaterthanorequalto.net/
+        function init() {
+            $('a[data-opens]').click(function(e) {
+                if (!$(this).hasClass('clicked')) {
+                    var openedBy = $(this).attr('data-opens');
+                    var externalLink = $(this).attr('data-href');
+                    $('[data-openedby="' + openedBy + '"]').removeClass('off').addClass('on');
+                    e.preventDefault();
+                    $(this).addClass('clicked').attr('href', externalLink).attr('target', '_blank');
+                };
+            });
+        }
+    </script>
+    <script>
+        (function(i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function() {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+        ga('create', 'UA-80438324-1', 'auto');
+        ga('send', 'pageview');
+    </script>
+</body>
+
+</html>
