Add 100 Years Calendar

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <a data-opens="bpe" data-href="http://www.buildingproductecosystems.org/">BPE</a><span data-openedby="bpe" class="off">, documenting the closing of material loops in construction industry</span>; and with
                 <a data-opens="23s" data-href="http://www.23sul.com.br/?p=1452">23 Sul</a><span data-openedby="23s" class="off">, designing better transportation infrastructure for cities</span>.</p>
             <p>I also believe data can be poetic and sensorial. I&#39;ve explored this through
+                <a data-opens="1yc" data-href="http://bernardol.com/100-years-calendar/">100 Years Calendar</a><span data-openedby="1yc" class="off">, a digital version of the artist On Kawara's calendar</span>;
                 <a data-opens="sf" data-href="https://shipping-forecasting.herokuapp.com/">Shipping Forecasting</a><span data-openedby="sf" class="off">, an automatic audio rendition of the BBC weather bulletin</span>; and
                 <a data-opens="ps" data-href="https://vimeo.com/114685563">Placing Sound</a><span data-openedby="ps" class="off">, an interactive installation that lets users control a soundscape</span>.</p>
         </div>
@@ -53,6 +54,7 @@
                 and with
                 <a data-opens="23s" data-href="http://www.23sul.com.br/?p=1452" class="clicked" href="http://www.23sul.com.br/?p=1452" target="_blank">23 Sul</a><span data-openedby="23s" class="on">, designing better transportation infrastructure for cities</span>.</p>
             <p>I also believe data can be poetic and sensorial. I've explored this through
+                <a data-opens="1yc" data-href="http://bernardol.com/100-years-calendar/" class="clicked" href="http://bernardol.com/100-years-calendar/" target="_blank">100 Years Calendar</a><span data-openedby="1yc" class="on">, a digital version of the artist On Kawara's calendar</span>;
                 <a data-opens="sf" data-href="https://shipping-forecasting.herokuapp.com/" class="clicked" href="https://shipping-forecasting.herokuapp.com/" target="_blank">Shipping Forecasting</a><span data-openedby="sf" class="on">, an automatic audio rendition of the BBC weather bulletin</span>;
                 and
                 <a data-opens="ps" data-href="https://vimeo.com/114685563" class="clicked" href="https://vimeo.com/114685563" target="_blank">Placing Sound</a><span data-openedby="ps" class="on">, an interactive installation that lets users control a soundscape</span>.</p>
