Change wastecensusnyc url

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <p>I work with data, make maps, and develop web applications. I also like teaching how to do these.</p>
             <p>For the past year I&#39;ve explored New York City&#39;s waste system. As part of this exploration, I&#39;ve built the web tools
                 <a data-opens="we" data-href="http://www.waste.exposed">waste.exposed</a><span data-openedby="we" class="off">, allowing individuals to understand where their waste is going</span>;
-                <a data-opens="wc" data-href="http://www.wastecensusnyc.org">Waste Census</a><span data-openedby="wc" class="off">, showing communities how they are contributing to Zero Waste</span>; and
+                <a data-opens="wc" data-href="http://wastecensusnyc.herokuapp.com/">Waste Census</a><span data-openedby="wc" class="off">, showing communities how they are contributing to Zero Waste</span>; and
                 <a data-opens="ws" data-href="http://www.wastescenario.com">Waste Scenario</a><span data-openedby="ws" class="off">, enabling specialists to build different waste systems for the future</span>.</p>
             <p>Currently, I&#39;m running the blog
                 <a data-opens="msp" data-href="http://medidasp.tumblr.com">MedidaSP</a><span data-openedby="msp" class="off">, examining the potential of open data to foster meaningful discussions about urban policy</span> in São Paulo, Brazil.</p>
@@ -40,7 +40,7 @@
             <p>I work with data, make maps, and develop web applications. I also like teaching how to do these.</p>
             <p>For the past year I've explored New York City's waste system. As part of this exploration, I've built the web tools
                 <a data-opens="we" data-href="http://www.waste.exposed" class="clicked" href="http://www.waste.exposed" target="_blank">waste.exposed</a><span data-openedby="we" class="on">, allowing individuals to understand where their waste is going</span>;
-                <a data-opens="wc" data-href="http://www.wastecensusnyc.org" class="clicked" href="http://www.wastecensusnyc.org" target="_blank">Waste Census</a><span data-openedby="wc" class="on">, showing communities how they are contributing to Zero Waste</span>;
+                <a data-opens="wc" data-href="http://wastecensusnyc.herokuapp.com/" class="clicked" href="http://wastecensusnyc.herokuapp.com/" target="_blank">Waste Census</a><span data-openedby="wc" class="on">, showing communities how they are contributing to Zero Waste</span>;
                 and
                 <a data-opens="ws" data-href="http://www.wastescenario.com" class="clicked" href="http://www.wastescenario.com" target="_blank">Waste Scenario</a><span data-openedby="ws" class="on">, enabling specialists to build different waste systems for the future</span>.</p>
             <p>Currently, I'm running the blog
