--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 <a data-opens="we" data-href="http://www.waste.exposed">waste.exposed</a><span data-openedby="we" class="off">, allowing individuals to understand where their waste is going</span>;
                 <a data-opens="wc" data-href="http://wastecensusnyc.herokuapp.com/">Waste Census</a><span data-openedby="wc" class="off">, showing communities how they are contributing to Zero Waste</span>; and
                 <a data-opens="ws" data-href="http://www.wastescenario.com">Waste Scenario</a><span data-openedby="ws" class="off">, enabling specialists to build different waste systems for the future</span>.</p>
-            <p>Currently, I&#39;m running the blog
-                <a data-opens="msp" data-href="http://medidasp.tumblr.com">MedidaSP</a><span data-openedby="msp" class="off">, examining the potential of open data to foster meaningful discussions about urban policy</span> in São Paulo, Brazil.</p>
+            <p>Currently, I&#39;m running
+                <a data-opens="msp" data-href="https://www.medidasp.com">MedidaSP</a><span data-openedby="msp" class="off">, an urban data visualization lab</span> in São Paulo, Brazil.</p>
             <p>Previously, I have done projects with
                 <a data-opens="ideo" data-href="http://www.knightfoundation.org/blogs/knightblog/2015/4/2/friday-night-lights-yields-lessons-building-community-charlotte-nc/">IDEO</a><span data-openedby="ideo" class="off">, using design to break down barriers between different communities</span>;
                 with
