Link and email fixes, add Maptime

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         <div id="yes-script" style="display:none">
             <p>I am an urbanist and I use technology to understand and transform cities.</p>
             <p>I work with data, make maps, and develop web applications. I also like teaching how to do these.</p>
+            <p>Currently, I&#39;m running
+                <a data-opens="msp" data-href="https://www.medidasp.com">MedidaSP</a><span data-openedby="msp" class="off">, an urban data visualization lab</span> in São Paulo, Brazil. I also organize the local <a data-opens="maptime" data-href="http://www.maptime.io/saopaulo/">Maptime</a> chapter here<span data-openedby="maptime" class="off">, an open learning environment on maps and data</span>.</p>
             <p>For the past year I&#39;ve explored New York City&#39;s waste system. As part of this exploration, I&#39;ve built the web tools
                 <a data-opens="we" data-href="http://www.waste.exposed">waste.exposed</a><span data-openedby="we" class="off">, allowing individuals to understand where their waste is going</span>;
                 <a data-opens="wc" data-href="http://wastecensusnyc.herokuapp.com/">Waste Census</a><span data-openedby="wc" class="off">, showing communities how they are contributing to Zero Waste</span>; and
-                <a data-opens="ws" data-href="http://www.wastescenario.com">Waste Scenario</a><span data-openedby="ws" class="off">, enabling specialists to build different waste systems for the future</span>.</p>
-            <p>Currently, I&#39;m running
-                <a data-opens="msp" data-href="https://www.medidasp.com">MedidaSP</a><span data-openedby="msp" class="off">, an urban data visualization lab</span> in São Paulo, Brazil.</p>
+                <a data-opens="ws" data-href="http://wastescenario.herokuapp.com">Waste Scenario</a><span data-openedby="ws" class="off">, enabling specialists to build different waste systems for the future</span>.</p>
             <p>Previously, I have done projects with
                 <a data-opens="ideo" data-href="http://www.knightfoundation.org/blogs/knightblog/2015/4/2/friday-night-lights-yields-lessons-building-community-charlotte-nc/">IDEO</a><span data-openedby="ideo" class="off">, using design to break down barriers between different communities</span>;
                 with
@@ -38,13 +38,13 @@
         <noscript>
             <p>I am an urbanist and I use technology to understand and transform cities.</p>
             <p>I work with data, make maps, and develop web applications. I also like teaching how to do these.</p>
+            <p>Currently, I&#39;m running
+                <a data-opens="msp" data-href="https://www.medidasp.com">MedidaSP</a><span data-openedby="msp" class="clicked" target="_blank">, an urban data visualization lab</span> in São Paulo, Brazil. I also organize the local <a data-opens="maptime" data-href="http://www.maptime.io/saopaulo/">Maptime</a> chapter here<span data-openedby="maptime" class="clicked" target="_blank">, an open learning environment on maps and data</span>.</p>
             <p>For the past year I've explored New York City's waste system. As part of this exploration, I've built the web tools
                 <a data-opens="we" data-href="http://www.waste.exposed" class="clicked" href="http://www.waste.exposed" target="_blank">waste.exposed</a><span data-openedby="we" class="on">, allowing individuals to understand where their waste is going</span>;
                 <a data-opens="wc" data-href="http://wastecensusnyc.herokuapp.com/" class="clicked" href="http://wastecensusnyc.herokuapp.com/" target="_blank">Waste Census</a><span data-openedby="wc" class="on">, showing communities how they are contributing to Zero Waste</span>;
                 and
-                <a data-opens="ws" data-href="http://www.wastescenario.com" class="clicked" href="http://www.wastescenario.com" target="_blank">Waste Scenario</a><span data-openedby="ws" class="on">, enabling specialists to build different waste systems for the future</span>.</p>
-            <p>Currently, I'm running the blog
-                <a data-opens="msp" data-href="http://medidasp.tumblr.com" class="clicked" href="http://medidasp.tumblr.com" target="_blank">MedidaSP</a><span data-openedby="msp" class="on">, examining the potential of open data to foster meaningful discussions about urban policy</span>                in São Paulo, Brazil.</p>
+                <a data-opens="ws" data-href="http://wastescenario.herokuapp.com" class="clicked" href="http://wastescenario.herokuapp.com" target="_blank">Waste Scenario</a><span data-openedby="ws" class="on">, enabling specialists to build different waste systems for the future</span>.</p>
             <p>Previously, I have done projects with
                 <a data-opens="ideo" data-href="http://www.knightfoundation.org/blogs/knightblog/2015/4/2/friday-night-lights-yields-lessons-building-community-charlotte-nc/" class="clicked" href="http://www.knightfoundation.org/blogs/knightblog/2015/4/2/friday-night-lights-yields-lessons-building-community-charlotte-nc/"
                     target="_blank">IDEO</a><span data-openedby="ideo" class="on">, using design to break down barriers between different communities</span>; with
@@ -60,7 +60,7 @@
                 <a data-opens="ps" data-href="https://vimeo.com/114685563" class="clicked" href="https://vimeo.com/114685563" target="_blank">Placing Sound</a><span data-openedby="ps" class="on">, an interactive installation that lets users control a soundscape</span>.</p>
         </noscript>
 
-        <p>Get in touch: bernardol@newschool.edu,
+        <p>Get in touch: bernardo@medidasp.com,
             <a class="clicked" target="_blank" href="https://github.com/bplmp">Github</a>,
             <a class="clicked" target="_blank" href="https://bernardol.cartodb.com/">CartoDB</a>,
             <a class="clicked" target="_blank" href="https://twitter.com/bernardomaps/">Twitter</a>, and
