CARTO, remove twitter

--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
 
         <p>Get in touch: bernardo@medidasp.com,
             <a class="clicked" target="_blank" href="https://github.com/bplmp">Github</a>,
-            <a class="clicked" target="_blank" href="https://bernardol.cartodb.com/">CartoDB</a>,
-            <a class="clicked" target="_blank" href="https://twitter.com/bernardomaps/">Twitter</a>, and
+            <a class="clicked" target="_blank" href="https://bernardol.cartodb.com/">CARTO</a>, and
             <a class="clicked" target="_blank" href="https://www.linkedin.com/in/loureirobernardo">LinkedIn</a>.</p>
     </div>
 
