--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="container">
-        <p>I&#39;m Bernardo Loureiro.</p>
+        <p id="intro">I&#39;m Bernardo Loureiro.</p>
 
         <div id="yes-script" style="display:none">
             <p>I am an urbanist and I use technology to understand and transform cities.</p>
