--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
             <p>I work with data, make maps, and develop web applications. I also like teaching how to do these.</p>
             <p>Currently, I&#39;m running
                 <a data-opens="msp" data-href="https://www.medidasp.com">MedidaSP</a><span data-openedby="msp" class="off">, an urban data visualization lab</span> in São Paulo, Brazil. I also organize the local <a data-opens="maptime" data-href="http://www.maptime.io/saopaulo/">Maptime</a> chapter here<span data-openedby="maptime" class="off">, an open learning environment on maps and data</span>.</p>
-            <p>For the past year I&#39;ve explored New York City&#39;s waste system. As part of this exploration, I&#39;ve built the web tools
-                <a data-opens="we" data-href="http://www.waste.exposed">waste.exposed</a><span data-openedby="we" class="off">, allowing individuals to understand where their waste is going</span>;
-                <a data-opens="wc" data-href="http://wastecensusnyc.herokuapp.com/">Waste Census</a><span data-openedby="wc" class="off">, showing communities how they are contributing to Zero Waste</span>; and
-                <a data-opens="ws" data-href="http://wastescenario.herokuapp.com">Waste Scenario</a><span data-openedby="ws" class="off">, enabling specialists to build different waste systems for the future</span>.</p>
-            <p>Previously, I have done projects with
-                <a data-opens="ideo" data-href="http://www.knightfoundation.org/blogs/knightblog/2015/4/2/friday-night-lights-yields-lessons-building-community-charlotte-nc/">IDEO</a><span data-openedby="ideo" class="off">, using design to break down barriers between different communities</span>;
-                with
+            <p>I have done projects with
+                <a data-opens="ohny" data-href="http://journeys.gettingtozero.nyc/">Open House New York</a><span data-openedby="ohny" class="off">, explaining NYC's waste system through a series of interactive web visualizations</span>; with
+                <a data-opens="ideo" data-href="http://www.knightfoundation.org/blogs/knightblog/2015/4/2/friday-night-lights-yields-lessons-building-community-charlotte-nc/">IDEO</a><span data-openedby="ideo" class="off">, using design to break down barriers between different communities</span>; with
                 <a data-opens="wxy" data-href="http://www.wxystudio.com/projects/urban_design/brooklyn_strand">WXY</a><span data-openedby="wxy" class="off">, engaging residents in urban design projects</span>; with
-                <a data-opens="bpe" data-href="http://www.buildingproductecosystems.org/">BPE</a><span data-openedby="bpe" class="off">, documenting the closing of material loops in construction industry</span>; and with
+                <a data-opens="bpe" data-href="http://www.buildingproductecosystems.org/">BPE</a><span data-openedby="bpe" class="off">, documenting and mapping the closing of material loops in construction industry</span>; and with
                 <a data-opens="23s" data-href="http://www.23sul.com.br/?p=1452">23 Sul</a><span data-openedby="23s" class="off">, designing better transportation infrastructure for cities</span>.</p>
+<p>For the past year I&#39;ve explored New York City&#39;s waste system. As part of this exploration, I&#39;ve built the web tools
+    <a data-opens="we" data-href="http://www.waste.exposed">waste.exposed</a><span data-openedby="we" class="off">, allowing individuals to understand where their waste is going</span>;
+    <a data-opens="wc" data-href="http://wastecensusnyc.herokuapp.com/">Waste Census</a><span data-openedby="wc" class="off">, showing communities how they are contributing to Zero Waste</span>; and
+    <a data-opens="ws" data-href="http://wastescenario.herokuapp.com">Waste Scenario</a><span data-openedby="ws" class="off">, enabling specialists to build different waste systems for the future</span>.</p>
             <p>I also believe data can be poetic and sensorial. I&#39;ve explored this through
                 <a data-opens="1yc" data-href="http://bernardol.com/100-years-calendar/">100 Years Calendar</a><span data-openedby="1yc" class="off">, a digital version of the artist On Kawara's calendar</span>;
                 <a data-opens="sf" data-href="https://shipping-forecasting.herokuapp.com/">Shipping Forecasting</a><span data-openedby="sf" class="off">, an automatic audio rendition of the BBC weather bulletin</span>; and
