--- a/index.html
+++ b/index.html
@@ -15,55 +15,38 @@
         <p id="intro">I&#39;m Bernardo Loureiro.</p>
 
         <div id="yes-script" style="display:none">
-            <p>I am an urbanist and I use technology to understand and transform cities.</p>
-            <p>I work with data, make maps, and develop web applications. I also like teaching how to do these.</p>
-            <p>Currently, I&#39;m running
-                <a data-opens="msp" data-href="https://www.medidasp.com">MedidaSP</a><span data-openedby="msp" class="off">, an urban data visualization lab</span> in São Paulo, Brazil. I also organize the local <a data-opens="maptime" data-href="http://www.maptime.io/saopaulo/">Maptime</a> chapter here<span data-openedby="maptime" class="off">, an open learning environment on maps and data</span>.</p>
-            <p>I have done projects with
-                <a data-opens="ohny" data-href="http://journeys.gettingtozero.nyc/">Open House New York</a><span data-openedby="ohny" class="off">, explaining NYC's waste system through a series of interactive web visualizations</span>; with
-                <a data-opens="ideo" data-href="http://www.knightfoundation.org/blogs/knightblog/2015/4/2/friday-night-lights-yields-lessons-building-community-charlotte-nc/">IDEO</a><span data-openedby="ideo" class="off">, using design to break down barriers between different communities</span>; with
-                <a data-opens="wxy" data-href="http://www.wxystudio.com/projects/urban_design/brooklyn_strand">WXY</a><span data-openedby="wxy" class="off">, engaging residents in urban design projects</span>; with
-                <a data-opens="bpe" data-href="http://www.buildingproductecosystems.org/">BPE</a><span data-openedby="bpe" class="off">, documenting and mapping the closing of material loops in construction industry</span>; and with
-                <a data-opens="23s" data-href="http://www.23sul.com.br/?p=1452">23 Sul</a><span data-openedby="23s" class="off">, designing better transportation infrastructure for cities</span>.</p>
-<p>For the past year I&#39;ve explored New York City&#39;s waste system. As part of this exploration, I&#39;ve built the web tools
-    <a data-opens="we" data-href="http://www.waste.exposed">waste.exposed</a><span data-openedby="we" class="off">, allowing individuals to understand where their waste is going</span>;
-    <a data-opens="wc" data-href="http://wastecensusnyc.herokuapp.com/">Waste Census</a><span data-openedby="wc" class="off">, showing communities how they are contributing to Zero Waste</span>; and
-    <a data-opens="ws" data-href="http://wastescenario.herokuapp.com">Waste Scenario</a><span data-openedby="ws" class="off">, enabling specialists to build different waste systems for the future</span>.</p>
-            <p>I also believe data can be poetic and sensorial. I&#39;ve explored this through
-                <a data-opens="1yc" data-href="http://bernardol.com/100-years-calendar/">100 Years Calendar</a><span data-openedby="1yc" class="off">, a digital version of the artist On Kawara's calendar</span>;
-                <a data-opens="sf" data-href="https://shipping-forecasting.herokuapp.com/">Shipping Forecasting</a><span data-openedby="sf" class="off">, an automatic audio rendition of the BBC weather bulletin</span>; and
-                <a data-opens="ps" data-href="https://vimeo.com/114685563">Placing Sound</a><span data-openedby="ps" class="off">, an interactive installation that lets users control a soundscape</span>.</p>
+            <p>I am an urbanist and I work as a consultant and developer in data analysis, visualization, and mapping, focused on urban issues.</p>
+            <p>I also teach classes and workshops on these topics.</p>
+            <p>
+                I run <a data-opens="msp" data-href="https://www.medidasp.com">MedidaSP</a><span data-openedby="msp" class="off portuguese">, an urban data visualization lab</span> in São Paulo, Brazil.
+                Currently, I'm consulting for the City of São Paulo Department of Education – <a data-opens="patio-digital" data-href="http://patiodigital.prefeitura.sp.gov.br/">Pátio Digital</a><span data-openedby="patio-digital" class="off portuguese">, working on data analysis, open data, and government transparency</span>.
+                I also organize the local <a data-opens="maptime" data-href="http://www.maptime.io/saopaulo/">Maptime</a> chapter here<span data-openedby="maptime" class="off portuguese">, an open learning environment on maps and data</span>.</p>
         </div>
 
         <noscript>
-            <p>I am an urbanist and I use technology to understand and transform cities.</p>
-            <p>I work with data, make maps, and develop web applications. I also like teaching how to do these.</p>
-            <p>Currently, I&#39;m running
-                <a data-opens="msp" data-href="https://www.medidasp.com">MedidaSP</a><span data-openedby="msp" class="clicked" target="_blank">, an urban data visualization lab</span> in São Paulo, Brazil. I also organize the local <a data-opens="maptime" data-href="http://www.maptime.io/saopaulo/">Maptime</a> chapter here<span data-openedby="maptime" class="clicked" target="_blank">, an open learning environment on maps and data</span>.</p>
-            <p>For the past year I've explored New York City's waste system. As part of this exploration, I've built the web tools
-                <a data-opens="we" data-href="http://www.waste.exposed" class="clicked" href="http://www.waste.exposed" target="_blank">waste.exposed</a><span data-openedby="we" class="on">, allowing individuals to understand where their waste is going</span>;
-                <a data-opens="wc" data-href="http://wastecensusnyc.herokuapp.com/" class="clicked" href="http://wastecensusnyc.herokuapp.com/" target="_blank">Waste Census</a><span data-openedby="wc" class="on">, showing communities how they are contributing to Zero Waste</span>;
-                and
-                <a data-opens="ws" data-href="http://wastescenario.herokuapp.com" class="clicked" href="http://wastescenario.herokuapp.com" target="_blank">Waste Scenario</a><span data-openedby="ws" class="on">, enabling specialists to build different waste systems for the future</span>.</p>
-            <p>Previously, I have done projects with
-                <a data-opens="ideo" data-href="http://www.knightfoundation.org/blogs/knightblog/2015/4/2/friday-night-lights-yields-lessons-building-community-charlotte-nc/" class="clicked" href="http://www.knightfoundation.org/blogs/knightblog/2015/4/2/friday-night-lights-yields-lessons-building-community-charlotte-nc/"
-                    target="_blank">IDEO</a><span data-openedby="ideo" class="on">, using design to break down barriers between different communities</span>; with
-                <a data-opens="wxy" data-href="http://www.wxystudio.com/projects/urban_design/brooklyn_strand" class="clicked" href="http://www.wxystudio.com/projects/urban_design/brooklyn_strand" target="_blank">WXY</a><span data-openedby="wxy" class="on">, engaging residents in urban design projects</span>;
-                with
-                <a data-opens="bpe" data-href="http://www.buildingproductecosystems.org/" class="clicked" href="http://www.buildingproductecosystems.org/" target="_blank">BPE</a><span data-openedby="bpe" class="on">, documenting the closing of material loops in construction industry</span>;
-                and with
-                <a data-opens="23s" data-href="http://www.23sul.com.br/?p=1452" class="clicked" href="http://www.23sul.com.br/?p=1452" target="_blank">23 Sul</a><span data-openedby="23s" class="on">, designing better transportation infrastructure for cities</span>.</p>
-            <p>I also believe data can be poetic and sensorial. I've explored this through
-                <a data-opens="1yc" data-href="http://bernardol.com/100-years-calendar/" class="clicked" href="http://bernardol.com/100-years-calendar/" target="_blank">100 Years Calendar</a><span data-openedby="1yc" class="on">, a digital version of the artist On Kawara's calendar</span>;
-                <a data-opens="sf" data-href="https://shipping-forecasting.herokuapp.com/" class="clicked" href="https://shipping-forecasting.herokuapp.com/" target="_blank">Shipping Forecasting</a><span data-openedby="sf" class="on">, an automatic audio rendition of the BBC weather bulletin</span>;
-                and
-                <a data-opens="ps" data-href="https://vimeo.com/114685563" class="clicked" href="https://vimeo.com/114685563" target="_blank">Placing Sound</a><span data-openedby="ps" class="on">, an interactive installation that lets users control a soundscape</span>.</p>
+          <p id="intro">I'm Bernardo Loureiro.</p>
+
+          <div id="yes-script" style="">
+              <p>I am an urbanist and I work as a consultant and developer in data analysis, visualization, and mapping, focused on urban issues.</p>
+              <p>I also teach classes and workshops on these topics.</p>
+              <p>
+                  I run <a data-opens="msp" data-href="https://www.medidasp.com" class="clicked" href="https://www.medidasp.com" target="_blank">MedidaSP</a><span data-openedby="msp" class="portuguese on">, an urban data visualization lab</span> in São Paulo, Brazil.
+                  Currently, I'm consulting for the City of São Paulo Department of Education – <a data-opens="patio-digital" data-href="http://patiodigital.prefeitura.sp.gov.br/" class="clicked" href="http://patiodigital.prefeitura.sp.gov.br/" target="_blank">Pátio Digital</a><span data-openedby="patio-digital" class="portuguese on">, working on data analysis, open data, and government transparency</span>.
+                  I also organize the local <a data-opens="maptime" data-href="http://www.maptime.io/saopaulo/" class="clicked" href="http://www.maptime.io/saopaulo/" target="_blank">Maptime</a> chapter here<span data-openedby="maptime" class="portuguese on">, an open learning environment on maps and data</span>.</p>
+          </div>
+
+          <p>Get in touch:
+              <a class="clicked" target="_blank" href="https://www.linkedin.com/in/loureirobernardo">LinkedIn</a>,
+              <a class="clicked" target="_blank" href="https://github.com/bplmp">Github</a>,
+              bernardo@medidasp.com.
+          </p>
         </noscript>
 
-        <p>Get in touch: bernardo@medidasp.com,
+        <p>Get in touch:
+            <a class="clicked" target="_blank" href="https://www.linkedin.com/in/loureirobernardo">LinkedIn</a>,
             <a class="clicked" target="_blank" href="https://github.com/bplmp">Github</a>,
-            <a class="clicked" target="_blank" href="https://bernardol.cartodb.com/">CARTO</a>, and
-            <a class="clicked" target="_blank" href="https://www.linkedin.com/in/loureirobernardo">LinkedIn</a>.</p>
+            bernardo@medidasp.com.
+        </p>
     </div>
 
     <script type="text/javascript">
