--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Bernardo Loureiro</title>
+    <title>Bernardo Loureiro.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="/js/jquery-2.2.4.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
