--- a/index.html
+++ b/index.html
@@ -1,91 +1,68 @@
-<!DOCTYPE html>
-<html>
+---
+layout: default
+title: Bernardo Loureiro
+---
 
-<head>
-    <meta charset="utf-8">
-    <title>Bernardo Loureiro.</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="/js/jquery-2.2.4.min.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link rel="stylesheet" href="/css/master.css" media="screen" title="no title" charset="utf-8">
-</head>
+<div id="projects">
+  <hr>
+  <h3>Projects</h3>
+  <div class="row">
+    {% assign projects =   site.data.projects | where: "status", "published" %}
+    {% for project in projects %}
+      <div class="col-xs-12 col-md-4">
 
-<body>
-    <div class="container">
-        <p id="intro">I&#39;m Bernardo Loureiro.</p>
-
-        <div id="yes-script" style="display:none">
-            <p>I am an urbanist and I work as a consultant and developer in data analysis, visualization, and mapping, focused on urban issues.</p>
-            <p>I also teach classes and workshops on these topics.</p>
-            <p>
-                I run <a data-opens="msp" data-href="https://www.medidasp.com">MedidaSP</a><span data-openedby="msp" class="off portuguese">, an urban data visualization lab</span> in São Paulo, Brazil.
-                Currently, I'm consulting for the City of São Paulo Department of Education – <a data-opens="patio-digital" data-href="http://patiodigital.prefeitura.sp.gov.br/">Pátio Digital</a><span data-openedby="patio-digital" class="off portuguese">, working on data analysis, open data, and government transparency</span>.
-                I also organize the local <a data-opens="maptime" data-href="http://www.maptime.io/saopaulo/">Maptime</a> chapter here<span data-openedby="maptime" class="off portuguese">, an open learning environment on maps and data</span>.</p>
+        <div id="{{ project.hash }}Controls" class="carousel slide" data-ride="false" data-interval="3500" pause="false">
+          <a data-toggle="collapse" href="#{{ project.hash }}" role="button" aria-expanded="false" aria-controls="{{ project-hash }}">
+            <div class="carousel-inner">
+              {% for i in project.otherImages %}
+                <div class="carousel-item {% if forloop.first == true %}active{% endif %}">
+                  <img src="public/images/{{ project.hash }}/{{ i }}" class="d-block w-100">
+                </div>
+              {% endfor %}
+            </div>
+          </a>
+          <a class="carousel-control-prev" href="#{{ project.hash }}Controls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#{{ project.hash }}Controls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
         </div>
 
-        <noscript>
-          <p id="intro">I'm Bernardo Loureiro.</p>
-
-          <div id="yes-script" style="">
-              <p>I am an urbanist and I work as a consultant and developer in data analysis, visualization, and mapping, focused on urban issues.</p>
-              <p>I also teach classes and workshops on these topics.</p>
-              <p>
-                  I run <a data-opens="msp" data-href="https://www.medidasp.com" class="clicked" href="https://www.medidasp.com" target="_blank">MedidaSP</a><span data-openedby="msp" class="portuguese on">, an urban data visualization lab</span> in São Paulo, Brazil.
-                  Currently, I'm consulting for the City of São Paulo Department of Education – <a data-opens="patio-digital" data-href="http://patiodigital.prefeitura.sp.gov.br/" class="clicked" href="http://patiodigital.prefeitura.sp.gov.br/" target="_blank">Pátio Digital</a><span data-openedby="patio-digital" class="portuguese on">, working on data analysis, open data, and government transparency</span>.
-                  I also organize the local <a data-opens="maptime" data-href="http://www.maptime.io/saopaulo/" class="clicked" href="http://www.maptime.io/saopaulo/" target="_blank">Maptime</a> chapter here<span data-openedby="maptime" class="portuguese on">, an open learning environment on maps and data</span>.</p>
+        <div class="project-text">
+          <a data-toggle="collapse" href="#{{ project.hash }}" role="button" aria-expanded="false" aria-controls="{{ project-hash }}">
+            <h4>{{ project.title }}  &#9660;</h4>
+          </a>
+          <p class="small">{{ project.date | date: '%Y' }} | <span>{{ project.tags | array_to_sentence_string: "" }}</span></p>
+          <div class="collapse" id="{{ project.hash }}">
+            <div class="card card-body">
+              {% for p in project.description %}
+                <p>{{ p }}</p>
+              {% endfor %}
+              <a href="{{ project.url }}" target="_blank">
+                Project site &raquo;
+              </a>
+              <hr>
+              <p class="small">tools: <span>{{ project.tools | array_to_sentence_string: "" }}</span></p>
+              {% if project.team != nil %}
+                <p class="small">team: <span>{{ project.team | array_to_sentence_string: "" }}</span></p>
+              {% endif %}
+              {% if project.client != nil %}
+                <p class="small">client: <span>{{ project.client | array_to_sentence_string: "" }}</span></p>
+              {% endif %}
+              {% if project.publications != nil %}
+                <p class="small">publications:
+                  {% for pb in project.publications %}
+                  <span><a href="{{ pb.link }}" target="_blank">{{ pb.name }}</a>{% if forloop.last == false %},{% endif %}</span>
+                  {% endfor %}
+                </p>
+              {% endif %}
+            </div>
           </div>
-
-          <p>Get in touch:
-              <a class="clicked" target="_blank" href="https://www.linkedin.com/in/loureirobernardo">LinkedIn</a>,
-              <a class="clicked" target="_blank" href="https://github.com/bplmp">Github</a>,
-              bernardo@medidasp.com.
-          </p>
-        </noscript>
-
-        <p>Get in touch:
-            <a class="clicked" target="_blank" href="https://www.linkedin.com/in/loureirobernardo">LinkedIn</a>,
-            <a class="clicked" target="_blank" href="https://github.com/bplmp">Github</a>,
-            bernardo@medidasp.com.
-        </p>
-    </div>
-
-    <script type="text/javascript">
-        window.onload = function() {
-            $('#yes-script').show();
-            init();
-        };
-
-        // js and functionality heavily inspired by Allan Trotter
-        // check out his website:
-        // http://greaterthanorequalto.net/
-        function init() {
-            $('a[data-opens]').click(function(e) {
-                if (!$(this).hasClass('clicked')) {
-                    var openedBy = $(this).attr('data-opens');
-                    var externalLink = $(this).attr('data-href');
-                    $('[data-openedby="' + openedBy + '"]').removeClass('off').addClass('on');
-                    e.preventDefault();
-                    $(this).addClass('clicked').attr('href', externalLink).attr('target', '_blank');
-                };
-            });
-        }
-    </script>
-    <script>
-        (function(i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r;
-            i[r] = i[r] || function() {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date();
-            a = s.createElement(o),
-                m = s.getElementsByTagName(o)[0];
-            a.async = 1;
-            a.src = g;
-            m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-
-        ga('create', 'UA-80438324-1', 'auto');
-        ga('send', 'pageview');
-    </script>
-</body>
-
-</html>
+        </div>
+      </div>
+    {% endfor %}
+  </div>
+</div>
