Improve templates, layouts

--- a/index.html
+++ b/index.html
@@ -3,66 +3,15 @@ layout: default
 title: Bernardo Loureiro
 ---
 
-<div id="projects">
-  <hr>
-  <h3>Projects</h3>
-  <div class="row">
-    {% assign projects = site.data.projects | where: "status", "published" | sort: "order" %}
-    {% for project in projects %}
-      <div class="col-xs-12 col-md-4">
-
-        <div id="{{ project.hash }}Controls" class="carousel slide" data-ride="false" data-interval="2000" pause="false">
-          <a data-toggle="collapse" href="#{{ project.hash }}" role="button" aria-expanded="false" aria-controls="{{ project-hash }}">
-            <div class="carousel-inner">
-              {% for i in project.otherImages %}
-                <div class="carousel-item {% if forloop.first == true %}active{% endif %}">
-                  <img src="public/images/{{ project.hash }}/{{ i }}" class="d-block w-100">
-                </div>
-              {% endfor %}
-            </div>
-          </a>
-          <a class="carousel-control-prev" href="#{{ project.hash }}Controls" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#{{ project.hash }}Controls" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
-        </div>
-
-        <div class="project-text">
-          <a data-toggle="collapse" href="#{{ project.hash }}" role="button" aria-expanded="false" aria-controls="{{ project-hash }}">
-            <h4>{{ project.title }}  &#9660;</h4>
-          </a>
-          <p class="small">{{ project.date | date: '%Y' }} | <span>{{ project.tags | array_to_sentence_string: "" }}</span></p>
-          <div class="collapse" id="{{ project.hash }}">
-            <div class="card card-body">
-              {% for p in project.description %}
-                <p>{{ p }}</p>
-              {% endfor %}
-              <a href="{{ project.url }}" target="_blank">
-                Project site &raquo;
-              </a>
-              <hr>
-              <p class="small">tools: <span>{{ project.tools | array_to_sentence_string: "" }}</span></p>
-              {% if project.team != nil %}
-                <p class="small">team: <span>{{ project.team | array_to_sentence_string: "" }}</span></p>
-              {% endif %}
-              {% if project.client != nil %}
-                <p class="small">client: <span>{{ project.client | array_to_sentence_string: "" }}</span></p>
-              {% endif %}
-              {% if project.media != nil %}
-                <p class="small">media:
-                  {% for pb in project.media %}
-                  <span><a href="{{ pb.link }}" target="_blank">{{ pb.name }}</a>{% if forloop.last == false %},{% endif %}</span>
-                  {% endfor %}
-                </p>
-              {% endif %}
-            </div>
-          </div>
-        </div>
-      </div>
-    {% endfor %}
+<div class="row">
+  <div class="col-xs-12 col-md-4">
+    <p>I am an urbanist and I work as a consultant and developer in data analysis, visualization, and mapping.</p>
+    <p>I also teach classes and workshops on these topics.</p>
+    <p>I run <a href="https://medidasp.com/" target="_blank">Medida SP</a>, an urban data visualization lab in São Paulo, Brazil.</p>
+    <p>Get in touch: <a href="https://github.com/bplmp">Github</a>, <a href="https://www.linkedin.com/in/loureirobernardo">LinkedIn</a>, <a href="https://medium.com/@medidasp/">Medium</a>, bernardo@medidasp.com.</p>
   </div>
 </div>
+
+<hr/>
+<h3>Projects</h3>
+{% include projects.html %}
